# ada

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  constraints-local.txt  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_auth.py  0003_profiles.py  0004_run_stage.py  0005_password.py
backend/src/ada/: __init__.py  config.py  main.py  observability.py  recover.py  resilience.py  seed.py  vertex.py
backend/src/ada/api/routes/: auth.py  chat.py  health.py  jobs.py  profile.py  runs.py  voice.py  webhooks.py
backend/src/ada/auth/: dependencies.py  mailer.py  passwords.py  repository.py  tokens.py
backend/src/ada/data/: jobs.json
backend/src/ada/db/: models.py  repositories.py  session.py
backend/src/ada/payments/: paystack.py  stripe.py
backend/src/ada/services/: coach.py  cv.py  graph.py  interview.py  runs.py  search.py  voice.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_cv_prompt.py  test_graph.py  test_interview.py  test_jobs_preview.py  test_payments_integration.py  test_paystack.py  test_resilience.py  test_search.py  test_stripe.py  test_webhooks.py
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx
frontend/src/lib/: api.ts  audio.ts  paystack.ts
mobile/: README.md  app.json  eas.json  package-lock.json  package.json
mobile/src/app/: _layout.tsx  login.tsx  new.tsx  pay.tsx  (+1 more)
(+31 files in other folders)
