[project]
name = "ada"
version = "0.1.0"
description = "Ada — an autonomous career agent. Day-1 slice: paywalled ATS CV rewrite."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "google-genai>=1.0",
    "langgraph>=0.2",
    "stripe>=10",
    "httpx>=0.27",
    "structlog>=24.1",
    "email-validator>=2.1",
    "alembic>=1.13",
    "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10", "aiosqlite>=0.20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ada"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: `Depends(...)` in defaults is the canonical FastAPI dependency pattern.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# One event loop for the whole test session: the app's engine pools asyncpg
# connections, and per-test loops make a pooled connection created in one test
# blow up ("attached to a different loop") when the next test checks it out.
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
